<resources>
    <string name="app_name">Butler</string>
    <string name="action_settings">Settings</string>
    <string name="taskName">Task Name</string>
    <string name="routineTaskName">Routine Task Name</string>
    <string name="incidentalTaskName">Incidental Task Name</string>
    <string name="frequency">Frequency</string>
    <string name="frequencyResponse">Choose Frequency</string>
    <string name="place">Place</string>
    <string name="placeResponse">Choose Place</string>
    <string name="addPlace">Select a Place</string>
    <string name="priority">Priority</string>
    <string name="priorityResponse">Choose Priority</string>
    <string name="deadline">Deadline</string>
    <string name="deadline_date">Date</string>
    <string name="deadline_time">Time</string>
    <string name="time_affinity">Time Affinity</string>
    <string name="timeAffinityResponse">Choose Time Affinity</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="market">Market</string>
    <string name="very_low">Very Low</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="yourName">Your Name</string>
    <string name="clearPlaces">Clear All</string>
    <string name="duration">Duration</string>
    <string name="slot0">Midnight to 3 A.M.</string>
    <string name="slot1">3 A.M. to 6 A.M.</string>
    <string name="slot2">6 A.M. to 9 A.M.</string>
    <string name="slot3">9 A.M. to 12 P.M.</string>
    <string name="slot4">12 P.M. to 3 P.M.</string>
    <string name="slot5">3 P.M. to 6 P.M.</string>
    <string name="slot6">6 P.M. to 9 P.M.</string>
    <string name="slot7">9 P.M. to Midnight</string>

    <string-array name="frequencyList">
        <item>@string/daily</item>
        <item>@string/monthly</item>
        <item>@string/weekly</item>
    </string-array>

    <string-array name="placeList">
        <item>@string/home</item>
        <item>@string/work</item>
        <item>@string/market</item>
    </string-array>

    <string-array name="priorityList">
        <item>@string/very_low</item>
        <item>@string/low</item>
        <item>@string/medium</item>
        <item>@string/high</item>
        <item>@string/very_high</item>
    </string-array>

    <string-array name="timeAffinityList">
        <item>@string/slot0</item>
        <item>@string/slot1</item>
        <item>@string/slot2</item>
        <item>@string/slot3</item>
        <item>@string/slot4</item>
        <item>@string/slot5</item>
        <item>@string/slot6</item>
        <item>@string/slot7</item>
    </string-array>

    <string name="title_activity_where_are_you">Butler</string>
    <string name="btEnter">Enter Place</string>
    <string name="compute_content">Where are you right Now?</string>

</resources>
