<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svIncidentalTask"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>

        <EditText
            android:id="@+id/etIncidentalTaskName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Task Name"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>

        <com.tech.ab.butler.elements.MultiSelectSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/incidentalSpinnerPlace"
            >
        </com.tech.ab.butler.elements.MultiSelectSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>

        <Spinner
            android:id="@+id/incidentalSpinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:entries="@array/priorityList"
            android:prompt="@string/priorityResponse"
            android:spinnerMode="dialog">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_affinity"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>

        <Spinner
            android:id="@+id/incidentalSpinnerTimeAffinity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:entries="@array/timeAffinityList"
            android:prompt="@string/timeAffinityResponse"
            android:spinnerMode="dialog">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/duration"
            android:layout_marginLeft="@dimen/standard_8"
            android:id="@+id/tvDurationIncidental"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textSize="@dimen/standard_23"
            android:layout_margin="@dimen/standard_5"
            android:textStyle="bold|italic"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_5"
                android:id="@+id/tvDeadlineDateIncidental"
                android:padding="@dimen/standard_5"
                android:text="Deadline Date"
                android:clickable="true"
                android:background="#34c7fc"
                android:gravity="center"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_5"
                android:gravity="center"
                android:id="@+id/tvDeadlineTimeIncidental"
                android:text="Deadline Time"
                android:background="#34c7fc"
                android:padding="@dimen/standard_5"
                android:clickable="true"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            >


            <Button
                android:layout_gravity="center"
                android:id="@+id/btnEnterIncidental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>
